# nest-drug

./: .gitattributes  .gitignore  LICENSE  NEXT_STEPS.md  README.md  RESULTS.md  pyproject.toml  requirements.txt
checkpoints/pretrain/: best_model.pt  checkpoint_epoch_10.pt  checkpoint_epoch_20.pt  checkpoint_epoch_30.pt  checkpoint_epoch_40.pt  checkpoint_epoch_50.pt  checkpoint_epoch_60.pt  checkpoint_epoch_70.pt
configs/: default.yaml
data/cache/: valid_smiles_963bf9953c3f.json
data/decoys/: chembl_decoys.csv
docs/: DATA_DOWNLOAD.md  DATA_SOURCES.md  TECHNICAL_IMPLEMENTATION.md
experiments/phase1_architecture/: ablation_contexts.py  context_embeddings.py  few_shot_adaptation.py  film_analysis.py
paper/: ARCHITECTURE_PROMPT.md  FIGURE_PLAN.md  generate_architecture.py  generate_figures.py  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper/arxiv_submission/: main.aux  main.blg  main.out  main.tex
paper/kdd_submission/: main.tex
paper/rebuttal/: 00_global_rebuttal.md  01_reviewer_HVym.md  (+7 more)
results/: benchmark_report.md  egfr_replay_analysis.md
scripts/: augment_admet.py  create_benchmark_from_training.py  download_all.py  download_benchmark_data.py  download_benchmark_data_v2.py  download_bindingdb.py  download_chembl.py  download_chembl_v2.py  download_tdc.py  enrich_v2_temporal.py  generate_publication_figures.py  process_chembl.py  reconstruct_programs.py  run_ablation_quick.sh  run_ablation_study.sh  run_all_benchmarks.py  run_dude_on_checkpoints.py  run_hts_comparison.py  run_pipeline.py  run_validation.py  train_v2.py
(+363 files in other folders)
