[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nest-drug"
version = "1.0.0"
description = "Context-conditioned molecular property prediction via FiLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jasper Zhang"},
    {name = "Bryan Cheng"},
]

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "pytorch-lightning>=2.0.0",
    "rdkit>=2023.9.1",
    "deepchem>=2.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "PyTDC>=0.4.0",
    "chembl_webresource_client>=0.10.8",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "umap-learn>=0.5.3",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "h5py>=3.8.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
esm = ["fair-esm>=2.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
